[package]
name = "config-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slog = "2.7"
slog-async = "2.6"
slog-json = "2.3"
slog-term = "2.8"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
tokio-stream = "0.1"
futures-util = "0.3"
futures = "0.3.30"

